--- a/public/admins.css
+++ b/public/admins.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     margin: 0;
     display: flex;
@@ -90,4 +90,4 @@ header {
     margin: 10px 0 0;
     font-size: 1em;
     color: #666;
-}
+} */
